--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@ body {
   background-color: #0a0714;
   border: solid 10px #ebc75e;
   margin: 0px !important;
-  min-height: 100%;
-  height: 100vh;
+  /* min-height: 100%; */
+  min-height: 100vh;
 }
 
 .sidebar {
